--- a/style.css
+++ b/style.css
@@ -37,7 +37,31 @@ body{
 .dino-estrellado{
     background-position-x: -252px;
 }
+.suelo{
+    width:200%;
+    height: 42px;
 
+    position:absolute;
+    bottom: 0;
+    left: 0;
+    background: url(/img/suelo.png) repeat-x 0px 0px;
+    background-size: 50% 42px;
+}
+
+.score{
+    width:100px;
+    height:30px;
+
+    position: absolute;
+    top: 5px;
+    right:15px;
+    z-index: 10;
+    color: #D48872;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: right;
+}
 @keyframes animarDino{
     from{
         background-position-x: -84px;
